@@ -68,7 +68,7 @@ public class Wizard extends Mage
 	                if((able!=null)
 	                &&(!CMLib.ableMapper().getDefaultGain(ID(),true,A.ID())))
 	                {
-	                    able.costOverrides=new Integer[]{new Integer(0),new Integer(0),new Integer(0),new Integer(0)};
+	                    able.costOverrides=new Integer[]{Integer.valueOf(0),Integer.valueOf(0),Integer.valueOf(0),Integer.valueOf(0)};
 	                    able.defaultProficiency=100;
 	                }
                 }
