@@ -211,7 +211,7 @@ public class OffLine extends Thread implements MudHost
                 }
             }catch(java.lang.ArrayIndexOutOfBoundsException e){}
 
-            accessed.addElement(address,new Long(System.currentTimeMillis()));
+            accessed.addElement(address,Long.valueOf(System.currentTimeMillis()));
             if(proceed!=0)
             {
                 System.out.println("Blocking a connection from "+address+" on port "+port);
